Fix overflow issue improve responsiveness

--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
 
 body{
   margin: 0;
-  scroll-behavior: none;
-  overflow: hidden;
+  
+  overflow-x: hidden;
+  overflow-y: hidden;
   
   
   
